# tidal2

./: .clang-format  BUILD  LICENSE  MODULE.bazel  requirements.txt  requirements_lock.txt
examples/: BUILD  example.cc  read_log.py  write_log.cc
tidal/: detail.hh  log_format.hh  stream.hh  tidal.hh
tidal_parser/: detail.py  tidal_parser.py
